--- a/src/Settings/AutoConnect.SettingsGroup.json
+++ b/src/Settings/AutoConnect.SettingsGroup.json
@@ -72,5 +72,11 @@
     "shortDescription": "UDP target host port for autoconnect",
     "type":             "uint32",
     "defaultValue":     14550
+},
+{
+    "name":             "nmeaUdpPort",
+    "shortDescription": "Udp port to receive NMEA streams",
+    "type":             "uint32",
+    "defaultValue":     14401
 }
 ]
