Make Taisync off by default

--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -211,7 +211,7 @@
     "shortDescription": "Enable Taisync Module Support",
     "longDescription":  "Enable Taisync Module Support",
     "type":             "bool",
-    "defaultValue":     true
+    "defaultValue":     false
 },
 {
     "name":             "enableTaisyncVideo",
