--- a/.travis.yml
+++ b/.travis.yml
@@ -82,11 +82,10 @@ install:
     fi
 
   # android dependencies: qt, gstreamer, android-ndk
-# gstreamer support temporarily disable until we figure the crash/build problems
-#wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/gstreamer-1.0-android-armv7-1.5.2.tar.bz2 &&
-#mkdir -p ${TRAVIS_BUILD_DIR}/gstreamer-1.0-android-armv7-1.5.2 &&
-#tar jxf gstreamer-1.0-android-armv7-1.5.2.tar.bz2 -C ${TRAVIS_BUILD_DIR}/gstreamer-1.0-android-armv7-1.5.2 &&
   - if [ "${SPEC}" = "android-g++" ]; then
+        wget --quiet http://www.grubba.com/gstreamer-1.0-android-universal-1.14.4.tar.bz2 &&
+        tar jxf gstreamer-1.0-android-universal-1.14.4.tar.bz2 -C ${TRAVIS_BUILD_DIR} &&
+        ls -lh ${TRAVIS_BUILD_DIR} &&
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.11.0-android_armv7-min.tar.bz2 &&
         tar jxf Qt5.11.0-android_armv7-min.tar.bz2 -C /tmp &&
         wget --quiet https://dl.google.com/android/repository/android-ndk-r16b-linux-x86_64.zip &&
