--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,7 @@ install:
 
   # android dependencies: qt, gstreamer, android-ndk
   - if [ "${SPEC}" = "android-g++" ]; then
-        wget --quiet http://www.grubba.com/gstreamer-1.0-android-universal-1.14.4.tar.bz2 &&
+        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/gstreamer-1.0-android-universal-1.14.4.tar.bz2 &&
         tar jxf gstreamer-1.0-android-universal-1.14.4.tar.bz2 -C ${TRAVIS_BUILD_DIR} &&
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.11.0-android_armv7-min.tar.bz2 &&
         tar jxf Qt5.11.0-android_armv7-min.tar.bz2 -C /tmp &&
