--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -68,6 +68,8 @@
 	<uses-feature android:name="android.hardware.location.network" android:required="false"/>
 	<uses-feature android:name="android.hardware.location" android:required="false"/>
 	
+	<uses-permission android:name="android.permission.INTERNET" />
+	
     <!-- The following comment will be replaced upon deployment with default features based on the dependencies of the application.
          Remove the comment if you do not require these default features. -->
     <!-- %%INSERT_FEATURES -->
