Move Linux to Ubuntu 16.04

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ matrix:
     fast_finish: true
     include:
         - os: linux
-          dist: trusty
+          dist: xenial
           env: SPEC=linux-g++-64 CONFIG=installer
           sudo: required
         - os: linux
-          dist: trusty
+          dist: xenial
           env: SPEC=linux-g++-64 CONFIG=debug
           sudo: required
         - os: android
