--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
         - os: linux
           dist: xenial
           env: SPEC=linux-g++-64 CONFIG=debug
+          services: xvfb
           sudo: required
         - os: android
           language: android
@@ -75,9 +76,7 @@ install:
   - if [ "${SPEC}" = "linux-g++-64" ]; then
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.11.3-gcc_64-min.tar.bz2 &&
         tar jxf Qt5.11.3-gcc_64-min.tar.bz2 -C /tmp &&
-        export PATH=/tmp/Qt5.11-gcc_64/5.11.3/gcc_64/bin:$PATH &&
-        export DISPLAY=:99.0 &&
-        sh -e /etc/init.d/xvfb start
+        export PATH=/tmp/Qt5.11-gcc_64/5.11.3/gcc_64/bin:$PATH
         ;
     fi
 
