--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ language: cpp
 env:
   global:
     - JOBS=4
-    - QT_FATAL_WARNINGS=1
+    # QT_FATAL_WARNINGS is turned off because Qt 5.11.3 throws a speech dispatcher not working warning when running unit tests
+    #- QT_FATAL_WARNINGS=1
     - SHADOW_BUILD_DIR=/tmp/shadow_build_dir
     # ANDROID_STOREPASS
     - secure: RGovyUnMw3fp/bHZi058JvANT1rYmNqrsuSYew0cIgirO6YbMHr/rsjwCm1FTYpBl8s1zgr+u2b8ftYnfnCz2YT+Aip4NWrVYpVU0FEmfytGILrnUS0pjlt8m7fU9AKR1ElOSll7yw7e1kftynN39Q321etvwbLZcXon6zz0suE=
@@ -14,28 +15,29 @@ matrix:
     fast_finish: true
     include:
         - os: linux
-          dist: trusty
+          dist: xenial
           env: SPEC=linux-g++-64 CONFIG=installer
           sudo: required
         - os: linux
-          dist: trusty
+          dist: xenial
           env: SPEC=linux-g++-64 CONFIG=debug
+          services: xvfb
           sudo: required
         - os: android
           language: android
           env: SPEC=android-g++ CONFIG=installer
           sudo: false
         - os: osx
-          osx_image: xcode9.2
+          osx_image: xcode10.1
           env: SPEC=macx-clang CONFIG=installer
           sudo: required
         - os: osx
-          osx_image: xcode9.2
+          osx_image: xcode10.1
           env: SPEC=macx-ios-clang CONFIG=release
           sudo: false
 # OSX builds pared back to installer only since travis sucks so bad we can't afford more than one'
 #        - os: osx
-#          osx_image: xcode8
+#          osx_image: xcode10.1
 #          env: SPEC=macx-clang CONFIG=debug
 #          sudo: required
 
@@ -48,8 +50,7 @@ android:
 addons:
   apt:
     packages:
-    - espeak
-    - libespeak-dev
+    - speech-dispatcher
     - libgstreamer-plugins-base1.0-dev
     - libgstreamer1.0-0:amd64
     - libgstreamer1.0-dev
@@ -73,11 +74,9 @@ before_install:
 install:
   # linux dependencies: qt
   - if [ "${SPEC}" = "linux-g++-64" ]; then
-        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.11.0-gcc_64-min.tar.bz2 &&
-        tar jxf Qt5.11.0-gcc_64-min.tar.bz2 -C /tmp &&
-        export PATH=/tmp/Qt5.11-gcc_64/5.11.0/gcc_64/bin:$PATH &&
-        export DISPLAY=:99.0 &&
-        sh -e /etc/init.d/xvfb start
+        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.11.3-gcc_64-min.tar.bz2 &&
+        tar jxf Qt5.11.3-gcc_64-min.tar.bz2 -C /tmp &&
+        export PATH=/tmp/Qt5.11-gcc_64/5.11.3/gcc_64/bin:$PATH
         ;
     fi
 
@@ -164,8 +163,9 @@ script:
 
   # unit tests linux
   - if [[ "${SPEC}" = "linux-g++-64" && "${CONFIG}" = "debug" ]]; then
-    	mkdir -p ~/.config/QtProject/ && cp ${TRAVIS_BUILD_DIR}/test/qtlogging.ini ~/.config/QtProject/ &&
-            ./debug/qgroundcontrol-start.sh --unittest;
+    	mkdir -p ~/.config/QtProject/ &&
+        cp ${TRAVIS_BUILD_DIR}/test/qtlogging.ini ~/.config/QtProject/ &&
+        ./debug/qgroundcontrol-start.sh --unittest;
     fi
 
 after_success:
