cmake build new sbf GPS driver

--- a/src/GPS/CMakeLists.txt
+++ b/src/GPS/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(gps
 	Drivers/src/gps_helper.cpp
 	Drivers/src/mtk.cpp
 	Drivers/src/rtcm.cpp
+	Drivers/src/sbf.cpp
 	Drivers/src/ubx.cpp
 	GPSManager.cc
 	GPSProvider.cc
