Add support for Start From Top/Bottom, plus more helpful stats

--- a/src/MissionManager/StructureScan.SettingsGroup.json
+++ b/src/MissionManager/StructureScan.SettingsGroup.json
@@ -32,5 +32,11 @@
     "units":            "m",
     "min":              1,
     "defaultValue":     100
+},
+{
+    "name":             "StartFromTop",
+    "shortDescription": "Start scan from top of structure.",
+    "type":             "bool",
+    "defaultValue":     true
 }
 ]
