Fix for linux build and update for AppImage creation
Fix for \'E: Unable to fetch some archives\' when fetching kmod
Update app image creation

--- a/custom/deploy/ci/linux/Dockerfile
+++ b/custom/deploy/ci/linux/Dockerfile
@@ -5,16 +5,20 @@
 #
 FROM mavlink/qgc-build-linux:2019-02-03
 
-RUN mkdir -p /home/jenkins/dev
-
 ENV DEBIAN_FRONTEND noninteractive
 
+ENV QGC_CUSTOM_APP_NAME="AGS"
+ENV QGC_CUSTOM_GENERIC_NAME="Auterion Ground Station"
+ENV QGC_CUSTOM_BINARY_NAME="AuterionGS"
+ENV QGC_CUSTOM_LINUX_START_SH="$(pwd)/custom/deploy/qgroundcontrol-start.sh"
+ENV QGC_CUSTOM_APP_ICON="$(pwd)/custom/res/src/Auterion_Icon.png"
+ENV QGC_CUSTOM_APP_ICON_NAME="Auterion_Icon"
+
 # Required by AppImage
+RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y --no-install-recommends apt-utils
 RUN apt-get install -y --no-install-recommends fuse
 RUN apt-get install -y --no-install-recommends kmod
 RUN apt-get install -y --no-install-recommends rsync
 
 ENV DEBIAN_FRONTEND teletype
-
-VOLUME /home/jenkins/dev
