Adding support to use customized maps (based on Mapbox) in QGC
- Adding new attributes (user's mapbox account and the selected studio style)
- Capturing the attribute values in settings for offline maps
- Introducing new mapbox API to be used when mapbox style is present (overrides map type selection, uses style instead)

--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -180,6 +180,20 @@
     "defaultValue":     ""
 },
 {
+    "name":             "mapboxAccount",
+    "shortDescription": "User account for Mapbox maps",
+    "longDescription":  "Your personal user account for Mapbox maps",
+    "type":             "string",
+    "defaultValue":     ""
+},
+{
+    "name":             "mapboxStyle",
+    "shortDescription": "Mapbox style identificator",
+    "longDescription":  "Mapbox design style for Mapbox maps",
+    "type":             "string",
+    "defaultValue":     ""
+},
+{
     "name":             "esriToken",
     "shortDescription": "Access token to Esri maps",
     "longDescription":  "Your personal access token for Esri maps",
