Adjusted the descriptive texts for attirbutes mapboxStyle og mapboxAccount

--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -188,8 +188,8 @@
 },
 {
     "name":             "mapboxStyle",
-    "shortDescription": "Mapbox style identificator",
-    "longDescription":  "Mapbox design style for Mapbox maps",
+    "shortDescription": "Mapbox style ID",
+    "longDescription":  "Mapbox design style ID for Mapbox maps",
     "type":             "string",
     "defaultValue":     ""
 },
