--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -235,5 +235,12 @@
     "enumStrings":      "System,English,български (Bulgarian),Deutsche (German),Français (French),Italiano (Italian),한국어 (Korean),Pусский (Russian),Türk (Turkish),中文 (Chinese)",
     "enumValues":       "0,1,2,3,4,5,6,7,8,9",
     "defaultValue":     0
+},
+{
+    "name":             "disableLocalLogging",
+    "shortDescription": "Disable all logging",
+    "longDescription":  "If this option is enabled nothing will be stored to disk.",
+    "type":             "bool",
+    "defaultValue":     false
 }
 ]
