--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -72,7 +72,7 @@ for:
     only:
       - Stable_V3.5
   artifacts:
-    - path: %SHADOW_BUILD_DIR%\release\qgroundcontrol.pdb
+    - path: C:\projects\qgroundcontrol\build_windows_install\release\qgroundcontrol.pdb
       name: pdb
 
 deploy:
