--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,7 @@
 buildscript {
 
     repositories {
-        maven  {
-            url "http://repo1.maven.org/maven2"
-        }
+        jcenter()
     }
 
     dependencies {
