--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/mavlink/include/mavlink/v2.0"]
 	path = libs/mavlink/include/mavlink/v2.0
 	url = https://github.com/mavlink/c_library_v2.git
+[submodule "custom/qzxing"]
+	path = custom/qzxing
+	url = https://github.com/ftylitak/qzxing.git
