--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,11 @@ matrix:
           osx_image: xcode9.2
           env: SPEC=macx-clang CONFIG=installer
           sudo: required
-        - os: osx
-          osx_image: xcode9.2
-          env: SPEC=macx-ios-clang CONFIG=release
-          sudo: false
+# iOS build needs updating Qt to > 5.10
+#        - os: osx
+#          osx_image: xcode9.2
+#          env: SPEC=macx-ios-clang CONFIG=release
+#          sudo: false
 # OSX builds pared back to installer only since travis sucks so bad we can't afford more than one'
 #        - os: osx
 #          osx_image: xcode10.1
