Fixed openssl-dev missing package error

--- a/custom/deploy/ci/linux/Dockerfile
+++ b/custom/deploy/ci/linux/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get upgrade -y && apt-get -y --quiet --no-install-reco
         kmod \
         rsync \
         openssl \
-        openssl-dev \
+        libssl-dev \
     && apt-get -y autoremove \
 	&& apt-get clean autoclean \
 	&& rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
