Link settings with Qt5::Multimedia

--- a/src/Settings/CMakeLists.txt
+++ b/src/Settings/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(Settings
 target_link_libraries(Settings
 	PUBLIC
 		qgc
+		Qt5::Multimedia
 )
 
 target_include_directories(Settings PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
