Add Alt Instrument option in Fly View Settings
By default the Instrument Panel is the one from master,
It can be switched to alternate version by a checkbox in General Settings/Fly View

--- a/src/Settings/FlyView.SettingsGroup.json
+++ b/src/Settings/FlyView.SettingsGroup.json
@@ -18,5 +18,11 @@
     "shortDescription": "Show/Hide Log Replay status bar",
     "type":             "bool",
     "defaultValue":     false
+},
+{
+    "name":             "alternateInstrumentPanel",
+    "shortDescription": "Use Alternate Instrument Panel instead of the default one",
+    "type":             "bool",
+    "defaultValue":     false
 }
 ]
