--- a/src/Settings/FlyView.SettingsGroup.json
+++ b/src/Settings/FlyView.SettingsGroup.json
@@ -26,20 +26,8 @@
     "defaultValue":     false
 },
 {
-    "name":             "showHomeHeadingCompass",
-    "shortDescription": "Show/Hide Home heading on Compass",
-    "type":             "bool",
-    "defaultValue":     false
-},
-{
-    "name":             "showCOGAngleCompass",
-    "shortDescription": "Show/Hide Course Over Ground angle on Compass",
-    "type":             "bool",
-    "defaultValue":     false
-},
-{
-    "name":             "showHeadingToNextWP",
-    "shortDescription": "Show/Hide Heading to Next Waypoint on Compass",
+    "name":             "showAdditionalIndicatorsCompass",
+    "shortDescription": "Show additional heading indicators on Compass",
     "type":             "bool",
     "defaultValue":     false
 },
