Change NorthUp Setting, Update SVG res
- NorthUp becomes NoseUp and is disable by default
- Changes on SVG to make them with the same diameter as the CompassDiag
- Change the order of the indicator layouts

--- a/src/Settings/FlyView.SettingsGroup.json
+++ b/src/Settings/FlyView.SettingsGroup.json
@@ -32,9 +32,9 @@
     "defaultValue":     false
 },
 {
-    "name":             "lockNorthUpCompass",
-    "shortDescription": "Lock North up on Compass",
+    "name":             "lockNoseUpCompass",
+    "shortDescription": "Lock Compass Nose-Up",
     "type":             "bool",
-    "defaultValue":     true
+    "defaultValue":     false
 }
 ]
