Configurable Go To Location max distance

--- a/src/Settings/FlyView.SettingsGroup.json
+++ b/src/Settings/FlyView.SettingsGroup.json
@@ -24,5 +24,13 @@
     "shortDescription": "Use Vertical Instrument Panel instead of the default one",
     "type":             "bool",
     "defaultValue":     false
+},
+{
+    "name":             "maxGoToLocationDistance",
+    "shortDescription": "Maximum distance allowed for Go To Location.",
+    "type":             "double",
+    "units":            "m",
+    "defaultValue":     1000,
+    "min":              1
 }
 ]
