CMake: Add AnalyzeView Qml files to CMake
This creates a fake target that adds the Qml sources to the CMakeProject
this let's IDE's that read CMake files to display the files on the
project viewer

--- a/src/AnalyzeView/CMakeLists.txt
+++ b/src/AnalyzeView/CMakeLists.txt
@@ -17,6 +17,17 @@ add_library(AnalyzeView
 	${EXTRA_SRC}
 )
 
+add_custom_target(
+	AnalyzeViewQml
+SOURCES
+	AnalyzePage.qml
+	AnalyzeView.qml
+	GeoTagPage.qml
+	LogDownloadPage.qml
+	MavlinkConsolePage.qml
+	MAVLinkInspectorPage.qml
+)
+
 target_link_libraries(AnalyzeView
 	PRIVATE
 		qgc
