--- a/src/AutoPilotPlugins/CMakeLists.txt
+++ b/src/AutoPilotPlugins/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+add_subdirectory(APM)
+add_subdirectory(Common)
+add_subdirectory(PX4)
+
 add_library(AutoPilotPlugins
 	APM/APMAirframeComponent.cc
 	APM/APMAirframeComponentController.cc
