CMake: Set warning level and disable -Waddress-of-packet-member (#7693)
* CMake: Set warning level and disable -Waddress-of-packet-member

Mavlink fails terribly on the check for -Waddress-of-packet-member
but this is not a problem of QGC, if I don't remove this warning
it's impossible to look at the terminal for QGC warnings.
This needs to be fixed however, but this is not the place.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+	add_compile_options(-Wall -Wextra -Wno-address-of-packed-member)
+endif()
+
 # CMake build type
 # Debug Release RelWithDebInfo MinSizeRel Coverage
 if (NOT CMAKE_BUILD_TYPE)
