--- a/.travis.yml
+++ b/.travis.yml
@@ -86,13 +86,13 @@ install:
   - if [ "${SPEC}" = "android-g++" ]; then
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/gstreamer-1.0-android-universal-1.14.4.tar.bz2 &&
         tar jxf gstreamer-1.0-android-universal-1.14.4.tar.bz2 -C ${TRAVIS_BUILD_DIR} &&
-        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.11.0-android_armv7-min.tar.bz2 &&
-        tar jxf Qt5.11.0-android_armv7-min.tar.bz2 -C /tmp &&
-        wget --quiet https://dl.google.com/android/repository/android-ndk-r16b-linux-x86_64.zip &&
-        unzip android-ndk-r16b-linux-x86_64.zip > /dev/null &&
-        export ANDROID_NDK_ROOT=`pwd`/android-ndk-r16b &&
+        wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_armv7-min.tar.bz2 &&
+        tar jxf Qt5.12.4-android_armv7-min.tar.bz2 -C /tmp &&
+        wget --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip &&
+        unzip android-ndk-r20-linux-x86_64.zip > /dev/null &&
+        export ANDROID_NDK_ROOT=`pwd`/android-ndk-r20 &&
         export ANDROID_SDK_ROOT=/usr/local/android-sdk &&
-        export PATH=/tmp/Qt5.11-android_armv7/5.11.0/android_armv7/bin:`pwd`/android-ndk-r16b:$PATH && echo $PATH
+        export PATH=/tmp/Qt5.12-android_armv7/5.12.4/android_armv7/bin:`pwd`/android-ndk-r20:$PATH && echo $PATH
         ;
     fi
 
