--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
         - os: android
           dist: trusty
           language: android
-          env: SPEC=android-g++ CONFIG=installer
+          env: SPEC=android-clang CONFIG=installer
           sudo: false
         - os: osx
           osx_image: xcode9.2
@@ -83,7 +83,7 @@ install:
     fi
 
   # android dependencies: qt, gstreamer, android-ndk
-  - if [ "${SPEC}" = "android-g++" ]; then
+  - if [ "${SPEC}" = "android-clang" ]; then
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/gstreamer-1.0-android-universal-1.14.4.tar.bz2 &&
         tar jxf gstreamer-1.0-android-universal-1.14.4.tar.bz2 -C ${TRAVIS_BUILD_DIR} &&
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/Qt5.12.4-android_armv7-min.tar.bz2 &&
@@ -134,12 +134,12 @@ before_script:
   - cd ${TRAVIS_BUILD_DIR}
 
   # switch android config from installer to release if the android storepass isn't available
-  - if [[ "${SPEC}" = "android-g++" && "${CONFIG}" = "installer" && -z ${ANDROID_STOREPASS} ]]; then
+  - if [[ "${SPEC}" = "android-clang" && "${CONFIG}" = "installer" && -z ${ANDROID_STOREPASS} ]]; then
         export CONFIG=release;
     fi
 
   # insert QGC version in AndroidManifest.xml
-  - if [ "${SPEC}" = "android-g++" ]; then
+  - if [ "${SPEC}" = "android-clang" ]; then
         git remote set-branches origin 'master' &&
         git fetch --tags origin master &&
         ./tools/update_android_version.sh;
@@ -182,7 +182,7 @@ after_success:
     else
         GOOGLE_PLAY_PKG=none;
     fi
-  - if [[ "${SPEC}" = "android-g++" && "${TRAVIS_PULL_REQUEST}" = "false" && "${GOOGLE_PLAY_PKG}" != "none" ]]; then
+  - if [[ "${SPEC}" = "android-clang" && "${TRAVIS_PULL_REQUEST}" = "false" && "${GOOGLE_PLAY_PKG}" != "none" ]]; then
         pip install --user --upgrade oauth2client &&
         pip install --user google-api-python-client pyopenssl ndg-httpsclient pyasn1 &&
         openssl aes-256-cbc -K $encrypted_25db6eb7c3fd_key -iv $encrypted_25db6eb7c3fd_iv -in android/Google_Play_Android_Developer-4432a3c4f5d1.json.enc -out android/Google_Play_Android_Developer-4432a3c4f5d1.json -d &&
