--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ install:
     fi
 
   # android dependencies: qt, gstreamer, android-ndk
-  - if [ "${SPEC}" = "android-clang" ]; then
+  - if [[ "${SPEC}" = "android-clang" ]]; then
         wget --quiet https://s3-us-west-2.amazonaws.com/qgroundcontrol/dependencies/gstreamer-1.0-android-universal-1.14.4.tar.bz2 &&
         tar jxf gstreamer-1.0-android-universal-1.14.4.tar.bz2 -C ${TRAVIS_BUILD_DIR} &&
         wget --quiet https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip &&
